# rust_snippets

./: .gitignore  Cargo.toml  README.md  index.md
aligner/: Cargo.toml
aligner/src/: main.rs
api_reqwest/: Cargo.toml
api_reqwest/src/: main.rs
etf/: Cargo.toml
etf/src/: error.rs  main.rs
etf_capital_profit_calc/: Cargo.toml
etf_capital_profit_calc/src/: error.rs  main.rs
lambdatest/: Cargo.toml
lambdatest/src/: main.rs
portscanner/: Cargo.toml
portscanner/src/: main.rs  ports.rs
revpolish/: Cargo.toml  README.md
revpolish/src/: main.rs
slouch/src/: main.rs
src/: main.rs
