[package]
name = "snippets"
version = "0.1.0"
authors = ["alicika <52126032+alicika@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

actix-web = "2.0.0"
actix-rt = "1.1.1"
# etf = { path = "../etf_capital_profit_calc"}

[workspace]

members = [
    "etf",
]
