[package]
name = "rust_snippets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
tokio = { version = "0.2.22", features = ["full"] }
anyhow = "1.0.43"
futures = "0.3.16"

[workspace]
members = ["aligner", "etf", "portscanner", "api_reqwest", "lambdatest", "revpolish"]    