[package]
name = "rust_snippets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.22", features = ["full"] }
anyhow = "1.0.43"
futures = "0.3.16"
clap = "3.0.0-beta.2"
thiserror = "1.0.30"

[workspace]

members = ["aligner", "etf", "portscanner", "api_reqwest", "lambdatest", "revpolish"]    

[features]
